# pypi-clickhouse-analytics

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/pypi_clickhouse_analytics/: app_settings.py  main.py
src/pypi_clickhouse_analytics/clients/: __init__.py  cache.py  pypi_api_client.py
src/pypi_clickhouse_analytics/dependencies/: clients.py  repos.py  services.py
src/pypi_clickhouse_analytics/entities/: projects.py
src/pypi_clickhouse_analytics/enums/: __init__.py  group_by_enum.py
src/pypi_clickhouse_analytics/exceptions/: base.py  resource.py  service.py
src/pypi_clickhouse_analytics/repos/: __init__.py  pypi_analytics_repo.py  pypi_cache_repo.py
src/pypi_clickhouse_analytics/routes/: projects.py
src/pypi_clickhouse_analytics/scripts/: __init__.py  init_clickhouse.py
src/pypi_clickhouse_analytics/services/: __init__.py  pypi_analytics_service.py
